# Tuitka

./: .README.md  .pre-commit-config.yaml  README.md  pyproject.toml  test.py  test.zsh
.github/workflows/: test_compilation.yaml
src/tuitka/: __init__.py  app.py  cli.py  cli_arguments.py  compilation_base.py  constants.py  direct_compilation.py  inline_app.py  tui.py  utils.py
src/tuitka/apps/: inline_app.py  tui_app.py
src/tuitka/assets/: __init__.py  style.tcss  style_modal.tcss  style_modal_compilation.tcss  style_modal_filedialog.tcss  style_modal_settings.tcss  style_modal_splash.tcss  style_modal_splashscreen.tcss
src/tuitka/assets/content/: commercial.md
src/tuitka/compilation/: runners.py
src/tuitka/ui/: constants.py
src/tuitka/ui/components/: compilation_view.py  header.py  script_input.py
src/tuitka/ui/screens/: compilation_screen.py  main_screen.py
src/tuitka/utils/: __init__.py  nuitka.py  platform.py
src/tuitka/widgets/: command_preview.py  flag_widgets.py  modals.py  output_logger.py  script_input.py  terminal.py
src/tuitka/widgets/modals/: compilation.py  direct_compilation.py  settings.py  splash.py
tests/compilation/: test_dependency_parser.py
tests/compilation/pygame/: main.py
