[project]
name = "tuitka"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=1.0.0",
]

[project.scripts]
tuitka = "tuitka:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.3.4",
    "textual-dev>=1.7.0",
]
