[project]
name = "tuitka"
version = "0.1.0"
description = "A TUI Frontend for Nuitka - The Python Compiler"
readme = "README.md"
authors = [
    { name = "KRRT7", email = "turcioskevinr@gmail.com" },
    { name = "Zaloog", email = "gramslars@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "nuitka>=2.7.7",
    "textual>=3.2.0",
    "uv>=0.7.3",
]

[project.scripts]
tuitka = "tuitka:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pre-commit-uv>=4.1.4",
    "pytest>=8.3.4",
    "ruff>=0.11.13",
    "textual-dev>=1.7.0",
]
